--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,14 @@
       <version>1.18.32</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>1.0.2</version>
+  </dependency>
   </dependencies>
+
+
   <build>
     <finalName>HospitalManagement</finalName>
   </build>
